@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.powertac</groupId>
         <artifactId>powertac-server</artifactId>
-        <version>1.8.0-SNAPSHOT</version>
+        <version>1.9.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
@@ -26,14 +26,14 @@
         <argLine>-Djava.security.egd=file:/dev/./urandom -Xmx256m</argLine>
         <assertj.version>3.13.2</assertj.version>
         <awaitility.version>3.1.6</awaitility.version>
-        <commons-io.version>2.6</commons-io.version>
+        <commons-io.version>2.7</commons-io.version>
         <docker-maven-plugin.version>1.2.0</docker-maven-plugin.version>
         <dropwizard-metrics.version>4.1.0</dropwizard-metrics.version>
         <frontend-maven-plugin.version>1.8.0</frontend-maven-plugin.version>
-        <hibernate.version>5.4.4.Final</hibernate.version>
-        <hibernate-validator.version>6.0.18.Final</hibernate-validator.version>
+        <hibernate.version>5.4.24.Final</hibernate.version>
+        <hibernate-validator.version>6.1.0.Final</hibernate-validator.version>
         <hikaricp.version>3.3.1</hikaricp.version>
-        <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
         <javassist.version>3.25.0-GA</javassist.version>
         <jcache.version>1.0.1</jcache.version>
         <jhipster.server.version>1.3.1</jhipster.server.version>
@@ -41,12 +41,12 @@
         <liquibase-hibernate5.version>3.7</liquibase-hibernate5.version>
         <liquibase-slf4j.version>2.0.0</liquibase-slf4j.version>
         <m2e.apt.activation>jdt_apt</m2e.apt.activation>
-        <mapstruct.version>1.3.0.Final</mapstruct.version>
+        <mapstruct.version>1.4.0.Final</mapstruct.version>
         <maven-eclipse-plugin.version>2.10</maven-eclipse-plugin.version>
         <maven-tomcat-plugin.version>2.2</maven-tomcat-plugin.version>
         <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
         <metrics-spring.version>3.1.3</metrics-spring.version>
-        <node.version>v10.16.3</node.version>
+        <node.version>v14.18.0</node.version>
         <problem-spring.version>0.24.0</problem-spring.version>
         <problem-spring-web.version>${problem-spring.version}</problem-spring-web.version>
         <!-- These remain empty unless the corresponding profile is active -->
@@ -84,7 +84,7 @@
         <sonar.sources>${project.basedir}/src/main/</sonar.sources>
         <sonar.surefire.reportsPath>${project.testresult.directory}/surefire-reports</sonar.surefire.reportsPath>
         <sonar.tests>${project.basedir}/src/test/</sonar.tests>
-        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
+        <spring-boot.version>2.6.6</spring-boot.version>
         <validation-api.version>2.0.1.Final</validation-api.version>
         <yarn.version>v1.17.3</yarn.version>
         <visualizer.mode>research</visualizer.mode>
@@ -140,17 +140,17 @@
         <dependency>
             <groupId>org.powertac</groupId>
             <artifactId>server-interface</artifactId>
-            <version>1.8.0-SNAPSHOT</version>
+            <version>1.9.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.powertac</groupId>
             <artifactId>logtool-core</artifactId>
-            <version>1.8.0-SNAPSHOT</version>
+            <version>1.9.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.powertac</groupId>
             <artifactId>server-main</artifactId>
-            <version>1.8.0-SNAPSHOT</version>
+            <version>1.9.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -174,6 +174,10 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
@@ -236,18 +240,15 @@
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-annotation</artifactId>
-            <version>${dropwizard-metrics.version}</version>
-        </dependency>
+            </dependency>
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
-            <version>${dropwizard-metrics.version}</version>
-        </dependency>
+            </dependency>
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-json</artifactId>
-	    <version>${dropwizard-metrics.version}</version>
-            <exclusions>
+	    <exclusions>
                 <exclusion>
                     <artifactId>metrics-core</artifactId>
                     <groupId>io.dropwizard.metrics</groupId>
@@ -257,8 +258,7 @@
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-jvm</artifactId>
-	    <version>${dropwizard-metrics.version}</version>
-            <exclusions>
+	    <exclusions>
                 <exclusion>
                     <artifactId>metrics-core</artifactId>
                     <groupId>io.dropwizard.metrics</groupId>
@@ -268,7 +268,6 @@
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-servlet</artifactId>
-	    <version>${dropwizard-metrics.version}</version>
 	    <exclusions>
                 <exclusion>
                     <artifactId>metrics-core</artifactId>
@@ -287,8 +286,7 @@
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-servlets</artifactId>
-	    <version>${dropwizard-metrics.version}</version>
-            <exclusions>
+	    <exclusions>
                 <exclusion>
                     <artifactId>metrics-core</artifactId>
                     <groupId>io.dropwizard.metrics</groupId>
@@ -372,13 +370,11 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-jcache</artifactId>
-            <version>${hibernate.version}</version>
-        </dependency>
+            </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>${hibernate-validator.version}</version>
-        </dependency>
+            </dependency>
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
@@ -442,10 +438,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-cloud-connectors</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
@@ -467,6 +459,14 @@
                 <exclusion>
                     <groupId>junit</groupId>
                     <artifactId>junit</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-all</artifactId>
                 </exclusion>
                 <!--<exclusion>-->
                     <!--<groupId>com.vaadin.external.google</groupId>-->
@@ -496,7 +496,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <artifactId>javax.el</artifactId>
+            <artifactId>jakarta.el</artifactId>
             <groupId>org.glassfish</groupId>
         </dependency>
         <dependency>
@@ -824,6 +824,7 @@
                     Enable the line below to have remote debugging of your application on port 5005
                     <jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</jvmArguments>
                     -->
+                    <jvmArguments>--illegal-access=warn</jvmArguments>
                 </configuration>
                 <executions>
                     <execution>
@@ -903,7 +904,7 @@
                                     <goal>gulp</goal>
                                 </goals>
                                 <configuration>
-                                    <arguments>install --no-notification</arguments>
+                                    <arguments>install</arguments>
                                 </configuration>
                             </execution>
                         </executions>
@@ -951,7 +952,7 @@
                                     <goal>gulp</goal>
                                 </goals>
                                 <configuration>
-                                    <arguments>build --no-notification</arguments>
+                                    <arguments>build</arguments>
                                 </configuration>
                             </execution>
                             <execution>
@@ -961,7 +962,7 @@
                                     <goal>gulp</goal>
                                 </goals>
                                 <configuration>
-                                    <arguments>test --no-notification</arguments>
+                                    <arguments>test</arguments>
                                 </configuration>
                             </execution>
                         </executions>
